# slides-template

./: README.md  _quarto.yml  index.qmd  pyproject.toml
docs/: index.html  search.json
docs/css/: callouts.css
src/slides/: __init__.py
